<resources>
    <string name="app_name">Sportmatch</string>

    <!-- App Strings -->
    <string name="welcome">Bienvenido(a) a Sportmatch</string>
    <string name="athlete">Deportista</string>
    <string name="establishment">Establecimiento</string>

    <!-- Button Strings -->
    <string name="google_sign_in">Iniciar con Google</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="go_back">Volver</string>

    <!-- Configs -->
    <string name="prefs_file">com.example.sportmatch.PREFERENCE_FILE_KEY</string>

    <!-- Private -->
    <string name="web_client_id">643504625296-440rhakjnueke143hh9fp03cfrn7qnrr.apps.googleusercontent.com</string>
    <string name="app_client_id">643504625296-83eqf360n5ujbs2nmgvb836oj679fbrn.apps.googleusercontent.com</string>

    <!-- Field Strings -->
    <string name="name">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_establishment_regsitration">EstablishmentRegsitrationActivity</string>
    <string name="sports_profile">Perfil deportivo</string>

    <!-- Title Strings -->
    <string name="register_as">Registrarse como:</string>
    <string name="athlete_registration">Registrar atleta</string>
    <string name="establishment_registration">Registrar establecimiento</string>
    <string name="title_activity_athlete_registration">AthleteRegistrationActivity</string>

    <!-- Sports profile -->
    <string name="sp_athlete">Atleta</string>
    <string name="sp_basketball_player">Basquetbolista</string>
    <string name="sp_cycist">Ciclista</string>
    <string name="sp_soccer_player">Futbolista</string>
    <string name="sp_swimmer">Nadador(a)</string>
    <string name="sp_tri_athlete">Triatleta</string>
</resources>