<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.auth.AuthActivity"
    android:orientation="vertical"
    android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/sixteen"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/twenty"
            android:src="@drawable/img_logo" />

        <!-- Text input to user email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyleTextInputLayotTextBoxLogin"
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@mipmap/ic_mail_black"
            app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/StyleTextInputEditTextLogin"
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text input to user pass -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyleTextInputLayotTextBoxLogin"
            android:id="@+id/lytPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@mipmap/ic_https_black"
            app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/StyleTextInputEditTextLogin"
                    android:id="@+id/login_admin_edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            style="@style/StyleAccentColoredButton"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"/>

        <!-- Registration button -->
        <com.google.android.material.button.MaterialButton
            style="@style/StylePrimaryColoredButton"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

        <!-- Google sign-in button -->
        <com.google.android.material.button.MaterialButton
            style="@style/StyleGoogleSignInButton"
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_sign_in" />

</LinearLayout>